--- a/src/NewPost/NewPost.css
+++ b/src/NewPost/NewPost.css
@@ -24,7 +24,6 @@
 
 .post-btn {
   border-radius: 20px;
-  width: 6%;
 }
 
 .post-btn:hover {
